# PyPlanning

./: .gitignore  .isort.cfg  .pylintrc  CHANGELOG.md  LICENSE  PyPlanning.bat  PyPlanning.spec  README.md  _config.yml  analyze.bat  index.md  pyproject.toml  requirements.txt
_layouts/: default.html
dev/: README.md  pip_list.txt  requirements.txt
doc/: conf.py  development.rst  examples.rst  index.rst  installation.rst  requirements.rst  update_requirements.py
examples/: project_planning-detailed.xml  project_planning-detailed_v1.xml  project_planning-detailed_v2.xml  project_planning.xml  project_planning_v1.xml  project_planning_v2.xml  team_schedule.xml  team_schedule_v1.xml  team_schedule_v2.xml  team_schedule_v2_Potter_leave.xml
nsis/: installer.nsi
nsis/images/: banner.pdn  win.pdn
planning/: __init__.py  app.py  config.py  gantt.py  model.py  qthelpers.py
planning/gui/: centralwidget.py  closing_days_dialog.py  logviewer.py  long_text_editor.py  mainwindow.py  multi_selection_combobox.py  svgviewer.py  treewidgets.py
planning/locale/fr/LC_MESSAGES/: planning.po
planning/tests/: test.xml  test_central_widget.py  test_gantt.py  test_logviewer.py  test_model.py  test_svgviewer.py  test_treewidgets.py  test_v1.xml  test_v2.xml
planning/utils/: conf.py  misc.py  qthelpers.py
scripts/: _tests_.bat  build_dist.bat  build_doc.bat  build_exe.bat  build_installer.bat  clean_up.bat  gettext.bat  gettext_scan.bat  release.bat  run_pylint.bat  utils.bat
