# PyPlanning setup configuration file

# Important note:
# Requirements are parsed by utils\genreqs.py to generate documentation

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "PyPlanning"
authors = [{ name = "Pierre Raybaut", email = "p.raybaut@codra.fr" }]
maintainers = [{ name = "PyPlanning Developers", email = "p.raybaut@codra.fr" }]
description = "Manage team schedules and quickly create simple project plannings"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Topic :: Software Development :: User Interfaces",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8, <4"
dependencies = ["PyQt5", "PyQtWebEngine", "guidata>=3.1", "svgwrite", "python-dateutil"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/Codra-Ingenierie-Informatique/PyPlanning/"
Documentation = "https://PyPlanning.readthedocs.io/en/latest/"

[project.gui-scripts]
pyplanning = "planning.app:run"

[project.optional-dependencies]
dev = ["black", "isort", "pylint", "Coverage"]
doc = ["sphinx>6", "pydata_sphinx_theme"]

[tool.setuptools.packages.find]
include = ["planning*"]

[tool.setuptools.package-data]
"*" = ["*.png", "*.svg", "*.mo", "*.cfg", "*.toml"]

[tool.setuptools.dynamic]
version = { attr = "planning.__version__" }
